[package]
name = "ton-adnl"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "ADNL TCP protocol implementation for TON network"

[dependencies]
ton-crypto = { path = "../ton-crypto" }
ton-cell = { path = "../ton-cell" }
ton-tl = { path = "../ton-tl" }
tokio = { version = "1", features = ["net", "io-util", "time", "sync"] }
thiserror.workspace = true
rand.workspace = true
tracing = "0.1"
hex = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
governor.workspace = true

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"

[features]
default = []
mainnet-tests = []
