[package]
name = "ton-nft"
description = "TEP-62 NFT (Non-Fungible Token) standard implementation for TON"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
ton-cell = { path = "../ton-cell" }
ton-adnl = { path = "../ton-adnl" }
thiserror = { workspace = true }
rand = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
